# splitwise-mcp

./: .env.example  .gitignore  KIRO_SETUP_GUIDE.md  LICENSE  MANIFEST.in  README.md  SETUP.md  TOOLS.md  pyproject.toml  test_mcp_tools.py
.kiro/settings/: mcp.json
.kiro/specs/splitwise-mcp-server/: design.md  requirements.md  tasks.md
src/splitwise_mcp_server/: __init__.py  __main__.py  auth.py  cache.py  client.py  config.py  errors.py  models.py  oauth_setup.py  resolver.py  server.py
tests/: __init__.py  conftest.py
